# synthogan-2d

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: main.py
app/controllers/: pipeline_controller.py
app/ui/: canvas_widget.py  dialogs.py  main_window.py  template.ui  template_ui.py
core/: brush_deform.py  checks.py  distortions.py  faults.py  generator_2d.py  horizons.py  io_npy.py  labeling.py  params.py  slicing.py
demo/: labels_example.npy  seismic_example.npy
gan_infer/: __init__.py  gan_infer.py  preprocess.py  tiling.py
gan_infer/model/: .gitkeep
ml/: cgan.py  config.json  flexible_generator.py  generated_seismic.npy  tiled_generator.py  visualize.py
ml/dataset/: .gitkeep
ml/eval/: .gitkeep
ml/real_slices/: real_inline_100.npy  real_inline_110.npy  real_inline_121.npy  real_inline_132.npy  real_inline_143.npy  real_inline_153.npy  real_inline_164.npy  real_inline_175.npy  real_inline_186.npy  real_inline_196.npy  real_inline_207.npy  real_inline_218.npy  real_inline_229.npy  real_inline_35.npy  real_inline_46.npy  real_inline_57.npy  real_inline_67.npy  real_inline_78.npy  real_inline_89.npy
ml/test_masks/: mask.npy  mask_T_0070.npy  mask_T_0099.npy  mask_T_0128.npy  mask_T_0158.npy  mask_T_0187.npy  mask_T_0217.npy  mask_T_0246.npy  mask_T_0276.npy  mask_T_0281.npy  mask_T_0282.npy  mask_T_0283.npy  mask_T_0284.npy  mask_T_0285.npy  mask_T_0286.npy  mask_T_0287.npy  mask_T_0288.npy  mask_T_0289.npy  mask_T_0290.npy  mask_T_0291.npy  mask_T_0292.npy  mask_T_0293.npy  mask_T_0294.npy  (+37 more)
notebooks/: demo_infer.ipynb
(+1 files in other folders)
