[tool.poetry]
name = "synthogan-2d"
version = "0.1.0"
description = "2D Seismic Data Synthesis with GAN"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}, {include = "core"}, {include = "gan_infer"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
numpy = "^1.24.0"
tensorflow = "^2.13.0"
pyside6 = "^6.5.0"
matplotlib = "^3.7.0"
scipy = "^1.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
